# skill-manager

./: Cargo.toml  README.md
.claude/: plugins.toml
docs/plans/: 2026-01-31-skill-manager-design.md
openspec/: config.yaml
openspec/changes/archive/2026-01-30-fix-marketplace-json-parsing/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-01-30-skill-manager-mvp/: design.md  tasks.md
openspec/changes/archive/2026-01-31-fix-installed-plugins-json-parsing/: tasks.md
openspec/changes/archive/2026-01-31-fix-resolved-version-fallback-to-git-sha/: design.md  tasks.md
openspec/changes/archive/2026-02-03-write-marketplace-info/: design.md  proposal.md  tasks.md
openspec/changes/fix-installed-plugins-json-parsing/: design.md  proposal.md
openspec/changes/fix-resolved-version-fallback-to-git-sha/: proposal.md
openspec/changes/skill-manager-mvp/: proposal.md
openspec/specs/cli-commands/: spec.md
openspec/specs/config-hash/: spec.md
openspec/specs/conflict-handling/: spec.md
openspec/specs/manifest-format/: spec.md
openspec/specs/marketplace-json-format/: spec.md
openspec/specs/marketplace-registration/: spec.md
openspec/specs/marketplace-resolution/: spec.md
openspec/specs/plugin-installation/: spec.md
openspec/specs/plugin-layout/: spec.md
src/: layout.rs  lib.rs  main.rs
src/cli/: add.rs  init.rs  install.rs  list.rs  mod.rs  remove.rs
src/config/: lockfile.rs  manifest.rs  mod.rs
src/installer/: cache.rs  claude.rs  mod.rs
src/resolver/: marketplace.rs  mod.rs  plugin.rs
(+14 files in other folders)
